почему не показывается текст на первых карточках

--- a/index.html
+++ b/index.html
@@ -13,11 +13,7 @@
       <div class="container">
         <div class="header-top">
           <a href="#0" class="logo-link">
-            <img
-              class="logo"
-              src="https://netology-code.github.io/html-2-diploma/sources/images/noemi-logo.svg"
-              alt="Logo"
-            />
+            <img class="logo" src="./sources/svg/noemi-logo.svg" alt="Logo" />
           </a>
           <nav class="nav">
             <ul class="nav-list">
@@ -37,8 +33,44 @@
         <h1 class="h1">Блог о творчестве, спорте, и образе жизни</h1>
       </div>
     </header>
+    <article class="trends">
+      <h2 class="trends-title">сейчас в тренде</h2>
+      <div class="trends-cards-block">
+        <div class="trends-card">
+          <img src="./sources/img/trend1.jpg" alt="" class="trends-img" />
+          <div class="trends-inner">
+            <div class="inner-tags">
+              <span class="span-inner-tag">lifestyle</span>
+              <span class="span-inner-tag">interior</span>
+            </div>
+            <h3 class="inner-title">Сейчас в тренде: сад на подоконнике</h3>
+          </div>
+        </div>
+        <div class="trends-card">
+          <img src="./sources/img/trend2.jpg" alt="" class="trends-img" />
+          <div class="trends-inner">
+            <div class="inner-tags"></div>
+            <div class="inner-title"></div>
+          </div>
+        </div>
+        <div class="trends-card">
+          <img src="./sources/img/trend3.jpg" alt="" class="trends-img" />
+          <div class="trends-inner">
+            <div class="inner-tags"></div>
+            <div class="inner-title"></div>
+          </div>
+        </div>
+        <div class="trends-card">
+          <img src="./sources/img/trend4.jpg" alt="" class="trends-img" />
+          <div class="trends-inner">
+            <div class="inner-tags"></div>
+            <di class="inner-title"></di>
+          </div>
+        </div>
+      </div>
+    </article>
 
-    <div class="main-container">
+    <!-- <div class="main-container">
       <main class="main">
         <article class="main-card">
           <figure class="main-card-media">
@@ -476,6 +508,6 @@
         </address>
         <div class="copyright">Copyright © 2009–2019 City Blog LLC.</div>
       </div>
-    </footer>
+    </footer> -->
   </body>
 </html>
