картинки пока не зафиксированы

--- a/index.html
+++ b/index.html
@@ -37,7 +37,11 @@
       <h2 class="trends-title">сейчас в тренде</h2>
       <div class="trends-cards-block">
         <div class="trends-card">
-          <img src="./sources/img/trend1.jpg" alt="" class="trends-img" />
+          <img
+            src="./sources/img/trend1.jpg"
+            alt="seedling"
+            class="trends-img"
+          />
           <div class="trends-inner">
             <div class="inner-tags">
               <span class="span-inner-tag">lifestyle</span>
@@ -47,24 +51,36 @@
           </div>
         </div>
         <div class="trends-card">
-          <img src="./sources/img/trend2.jpg" alt="" class="trends-img" />
+          <img src="./sources/img/trend2.jpg" alt="cheese" class="trends-img" />
           <div class="trends-inner">
-            <div class="inner-tags"></div>
-            <div class="inner-title"></div>
+            <div class="inner-tags">
+              <span class="span-inner-tag">food</span>
+            </div>
+            <h3 class="inner-title">
+              сыры на красивых картинках из интернета: какие они на вкус?
+            </h3>
           </div>
         </div>
         <div class="trends-card">
-          <img src="./sources/img/trend3.jpg" alt="" class="trends-img" />
+          <img src="./sources/img/trend3.jpg" alt="hiking" class="trends-img" />
           <div class="trends-inner">
-            <div class="inner-tags"></div>
-            <div class="inner-title"></div>
+            <div class="inner-tags">
+              <span class="span-inner-tag">lifestyle</span>
+              <span class="span-inner-tag">travel</span>
+            </div>
+            <h3 class="inner-title">СОБИРАЕМСЯ В ПЕРВЫЙ ПОХОД В ГОРЫ</h3>
           </div>
         </div>
         <div class="trends-card">
-          <img src="./sources/img/trend4.jpg" alt="" class="trends-img" />
+          <img src="./sources/img/trend4.jpg" alt="lemons" class="trends-img" />
           <div class="trends-inner">
-            <div class="inner-tags"></div>
-            <di class="inner-title"></di>
+            <div class="inner-tags">
+              <span class="span-inner-tag">food</span>
+              <span class="span-inner-tag">health</span>
+            </div>
+            <h3 class="inner-title">
+              Сейчас в тренде: сКОЛЬКО ВИТАМИНА c В ЛИМОНАХ?
+            </h3>
           </div>
         </div>
       </div>
