все еще сохраняется зазор слева и справа

--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
     <article class="trends">
       <h2 class="trends-title">сейчас в тренде</h2>
       <div class="trends-cards-block">
-        <div class="trends-card">
-          <img
-            src="./sources/img/trend1.jpg"
+        <div class="trends-card seedling-img">
+          <!-- <img
+            src="./sources/img/tren1.jpg"
             alt="seedling"
             class="trends-img"
-          />
+          /> -->
           <div class="trends-inner">
             <div class="inner-tags">
               <span class="span-inner-tag">lifestyle</span>
@@ -50,8 +50,8 @@
             <h3 class="inner-title">Сейчас в тренде: сад на подоконнике</h3>
           </div>
         </div>
-        <div class="trends-card">
-          <img src="./sources/img/trend2.jpg" alt="cheese" class="trends-img" />
+        <div class="trends-card cheese-img">
+          <!-- <img src="./sources/img/trend2.jpg" alt="cheese" class="trends-img" /> -->
           <div class="trends-inner">
             <div class="inner-tags">
               <span class="span-inner-tag">food</span>
@@ -61,8 +61,8 @@
             </h3>
           </div>
         </div>
-        <div class="trends-card">
-          <img src="./sources/img/trend3.jpg" alt="hiking" class="trends-img" />
+        <div class="trends-card hiking-img">
+          <!-- <img src="./sources/img/trend3.jpg" alt="hiking" class="trends-img" /> -->
           <div class="trends-inner">
             <div class="inner-tags">
               <span class="span-inner-tag">lifestyle</span>
@@ -71,8 +71,8 @@
             <h3 class="inner-title">СОБИРАЕМСЯ В ПЕРВЫЙ ПОХОД В ГОРЫ</h3>
           </div>
         </div>
-        <div class="trends-card">
-          <img src="./sources/img/trend4.jpg" alt="lemons" class="trends-img" />
+        <div class="trends-card lemons-img">
+          <!-- <img src="./sources/img/trend4.jpg" alt="lemons" class="trends-img" /> -->
           <div class="trends-inner">
             <div class="inner-tags">
               <span class="span-inner-tag">food</span>
