что-то не так с картинкой

--- a/index.html
+++ b/index.html
@@ -86,15 +86,11 @@
       </div>
     </article>
 
-    <!-- <div class="main-container">
+    <div class="main-container">
       <main class="main">
         <article class="main-card">
           <figure class="main-card-media">
-            <img
-              src="https://netology-code.github.io/html-2-diploma/sources/images/last-post1.jpg"
-              alt="a beautiful place"
-              class="card-img"
-            />
+            <div class="card-img card-img1"></div>
           </figure>
           <div class="card-text">
             <ul class="card-list-links">
@@ -257,7 +253,7 @@
           </div>
         </article>
 
-        <article class="main-card">
+        <!-- <article class="main-card">
           <img
             src="https://netology-code.github.io/html-2-diploma/sources/images/last-post6.jpg"
             alt=""
@@ -320,7 +316,7 @@
               </p>
             </div>
           </div>
-        </article>
+        </article> -->
       </main>
 
       <aside class="aside">
@@ -501,7 +497,7 @@
         </section>
       </aside>
     </div>
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="footer-wrapper">
         <address class="address">
           <ul class="footer-list">
