надо сделать другие figure div

--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
     <div class="main-container">
       <main class="main">
         <article class="main-card">
-          <figure class="main-card-media">
+          <div class="figure">
             <div class="card-img card-img1"></div>
-          </figure>
+          </div>
           <div class="card-text">
             <ul class="card-list-links">
               <li class="card-list-link">
