выравниваем "наши изделия"

--- a/index.html
+++ b/index.html
@@ -473,9 +473,65 @@
         </section>
       </aside>
     </div>
+    <article class="products">
+      <h2 class="products-title">Наши изделия</h2>
+      <div class="products-wrapper">
+        <div class="products-card">
+          <div class="products-img1"></div>
+          <div class="products-inner">
+            <h3 class="products-inner-title">подушки на диван</h3>
+            <p class="products-description">
+              Набор из двух подушек с модными принтами. Видео о создании
+              <a class="products-link" href="#0">здесь.</a>
+            </p>
+            <div class="price-button-block">
+              <div class="prices">
+                <div class="old-price">1000 Р</div>
+                <div class="new-price">800 Р</div>
+              </div>
+              <button class="btn-to-shop">В магазин</button>
+            </div>
+          </div>
+        </div>
+        <div class="products-card">
+          <div class="products-img2"></div>
+          <div class="products-inner">
+            <h3 class="products-inner-title">Кукла «Зайчик»</h3>
+            <p class="products-description">
+              Интерьерная рукодельная кукла «Зайчик», созданию которой посвящена
+              <a class="products-link" href="#0">весенняя серия постов</a> в
+              блоге и несколько подкастов.
+            </p>
+            <div class="price-button-block">
+              <div class="prices">
+                <div class="new-price">3500 Р</div>
+              </div>
+              <button class="btn-to-shop">В магазин</button>
+            </div>
+          </div>
+        </div>
+        <div class="products-card">
+          <div class="products-img3"></div>
+          <div class="products-inner">
+            <h3 class="products-inner-title">Шестиугольная рамка</h3>
+            <p class="products-description">
+              Необычная рамка для украшения дома из видео
+              <a class="products-link" href="#0">
+                «Как сделать рамку из подручных средств за 30 минут»</a
+              >
+            </p>
+            <div class="price-button-block">
+              <div class="prices">
+                <div class="old-price">500 Р</div>
+                <div class="new-price">400 Р</div>
+              </div>
+              <button class="btn-to-shop">В магазин</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </article>
 
-
-    
     <!-- <footer class="footer">
       <div class="footer-wrapper">
         <address class="address">
