--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
       </div>
     </article>
 
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="footer-wrapper">
         <address class="address">
           <ul class="footer-list">
@@ -555,6 +555,6 @@
         </address>
         <div class="copyright">Copyright © 2009–2019 City Blog LLC.</div>
       </div>
-    </footer> -->
+    </footer>
   </body>
 </html>
