попап почти готов

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <input type="radio" name="radio" value="Yes" checked />Да
             <input type="radio" name="radio" value="No" />Нет
           </div>
-          <label for="textarea">
+          <label class="label-textarea" for="textarea">
             Расскажите, какой контент вы хотели бы видеть на нашем сайте?
             <input
               id="textarea"
