дорабатываю в связи с проверкой дз

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <div id="popup" class="popup _hidden">
+    <div id="popup" class="popup hidden">
       <div class="popup-body">
         <form class="popup-content">
           <a href="" class="popup-close"></a>
@@ -68,6 +68,9 @@
               </li>
             </ul>
           </nav>
+          <div class="burger">
+            <img src="./sources/svg/hamburger_icon.svg" alt="" />
+          </div>
         </div>
         <h1 class="h1">Блог о творчестве, спорте, и образе жизни</h1>
       </div>
