сделал .inner-title ссылкой(4 пункт)

--- a/index.html
+++ b/index.html
@@ -85,43 +85,69 @@
             class="trends-img"
           /> -->
           <div class="trends-inner">
-            <div class="inner-tags">
-              <span class="span-inner-tag">lifestyle</span>
-              <span class="span-inner-tag">interior</span>
-            </div>
-            <h3 class="inner-title">Сейчас в тренде: сад на подоконнике</h3>
+            <ul class="inner-tags">
+              <li class="inner-tag">
+                <a class="inner-anchor" href="#0">lifestyle</a>
+              </li>
+              <li class="inner-tag">
+                <a class="inner-anchor" href="#0">interior</a>
+              </li>
+            </ul>
+            <h3 class="inner-title">
+              <a href="#0" class="inner-title-anchor"
+                >Сейчас в тренде: сад на подоконнике</a
+              >
+            </h3>
           </div>
         </div>
         <div class="trends-card cheese-img">
           <!-- <img src="./sources/img/trend2.jpg" alt="cheese" class="trends-img" /> -->
           <div class="trends-inner">
-            <div class="inner-tags">
-              <span class="span-inner-tag">food</span>
-            </div>
+            <ul class="inner-tags">
+              <li class="inner-tag">
+                <a class="inner-anchor" href="#0">food</a>
+              </li>
+            </ul>
             <h3 class="inner-title">
-              сыры на красивых картинках из интернета: какие они на вкус?
+              <a href="#0" class="inner-title-anchor"
+                >сыры на красивых картинках из интернета: какие они на вкус?</a
+              >
             </h3>
           </div>
         </div>
         <div class="trends-card hiking-img">
           <!-- <img src="./sources/img/trend3.jpg" alt="hiking" class="trends-img" /> -->
           <div class="trends-inner">
-            <div class="inner-tags">
-              <span class="span-inner-tag">lifestyle</span>
-              <span class="span-inner-tag">travel</span>
-            </div>
-            <h3 class="inner-title">СОБИРАЕМСЯ В ПЕРВЫЙ ПОХОД В ГОРЫ</h3>
+            <ul class="inner-tags">
+              <li class="inner-tag">
+                <a href="#0" class="inner-anchor">lifestyle</a>
+              </li>
+              <li class="inner-tag">
+                <a href="#0" class="inner-anchor">travel</a>
+              </li>
+            </ul>
+            <h3 class="inner-title">
+              <a href="#0" class="inner-title-anchor"
+                >СОБИРАЕМСЯ В ПЕРВЫЙ ПОХОД В ГОРЫ</a
+              >
+            </h3>
           </div>
         </div>
         <div class="trends-card lemons-img">
           <!-- <img src="./sources/img/trend4.jpg" alt="lemons" class="trends-img" /> -->
           <div class="trends-inner">
-            <div class="inner-tags">
-              <span class="span-inner-tag">food</span>
-              <span class="span-inner-tag">health</span>
-            </div>
+            <ul class="inner-tags">
+              <li class="inner-tag">
+                <a href="#0" class="inner-anchor">food</a>
+              </li>
+              <li class="inner-tag">
+                <a href="#0" class="inner-anchor">health</a>
+              </li>
+            </ul>
             <h3 class="inner-title">
-              Сейчас в тренде: сКОЛЬКО ВИТАМИНА c В ЛИМОНАХ?
+              <a href="#0" class="inner-title-anchor"
+                >Сейчас в тренде: сКОЛЬКО ВИТАМИНА c В ЛИМОНАХ?</a
+              >
             </h3>
           </div>
         </div>
@@ -369,7 +395,7 @@
           <article class="aside-card">
             <div class="figure">
               <div class="aside-img aside-img1">
-                <img src="./sources/img/2.jpg" alt="beautiful shore">
+                <img src="./sources/img/2.jpg" alt="beautiful shore" />
               </div>
             </div>
             <div class="aside-text">
@@ -387,7 +413,7 @@
           <article class="aside-card">
             <div class="figure">
               <div class="aside-img aside-img2">
-                <img src="./sources/img/151.jpg" alt="yoga">
+                <img src="./sources/img/151.jpg" alt="yoga" />
               </div>
             </div>
             <div class="aside-text">
@@ -403,7 +429,7 @@
           <article class="aside-card">
             <div class="figure">
               <div class="aside-img aside-img3">
-                <img src="./sources/img/45.jpg" alt="balcony">
+                <img src="./sources/img/45.jpg" alt="balcony" />
               </div>
             </div>
             <div class="aside-text aside-strange-one">
@@ -421,7 +447,7 @@
           <article class="aside-card">
             <div class="figure">
               <div class="aside-img aside-img4">
-                <img src="./sources/img/501.jpg" alt="food">
+                <img src="./sources/img/501.jpg" alt="food" />
               </div>
             </div>
             <div class="aside-text">
@@ -439,7 +465,7 @@
           <article class="aside-card">
             <div class="figure">
               <div class="aside-img aside-img5">
-                <img src="./sources/img/7.jpg" alt="hair">
+                <img src="./sources/img/7.jpg" alt="hair" />
               </div>
             </div>
             <div class="aside-text">
