--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <div id="popup" class="popup hidden">
       <div class="popup-body">
         <form class="popup-content">
-          <a href="" class="popup-close"></a>
-          <div class="popup-title">Ваш ФИДБЕк</div>
+        <img src="./sources/svg/form-x.svg" alt="close" class="popup-close">
+          <h3 class="popup-title">Ваш ФИДБЕк</h3>
           <p class="popup-how-often">Как часто вы заходите на сайт?</p>
           <select class="select" name="select">
             <option class="option" value="option" selected>
@@ -595,7 +595,7 @@
                 <div class="old-price">1000 Р</div>
                 <div class="new-price">800 Р</div>
               </div>
-              <button class="btn-to-shop">В магазин</button>
+              <a class="btn-to-shop" href="#0">В магазин</a>
             </div>
           </div>
         </div>
@@ -629,7 +629,7 @@
               <div class="prices">
                 <div class="new-price">3500 Р</div>
               </div>
-              <button class="btn-to-shop">В магазин</button>
+              <a class="btn-to-shop" href="#0">В магазин</a>
             </div>
           </div>
         </div>
@@ -666,7 +666,7 @@
                 <div class="old-price">500 Р</div>
                 <div class="new-price">400 Р</div>
               </div>
-              <button class="btn-to-shop">В магазин</button>
+              <a class="btn-to-shop" href="#0">В магазин</a>
             </div>
           </div>
         </div>
