перед main-container(ом)

--- a/index.html
+++ b/index.html
@@ -165,9 +165,7 @@
       <main class="main">
         <article class="main-card">
           <div class="figure">
-            <div class="card-img card-img1">
-              <img src="./sources/img/last-post1.jpg" alt="beautiful place" />
-            </div>
+              <img class="card-img card-img1" src="./sources/img/last-post1.jpg" alt="beautiful place" />
           </div>
           <div class="card-text">
             <ul class="card-list-links">
@@ -198,9 +196,7 @@
 
         <article class="main-card">
           <div class="figure">
-            <div class="card-img card-img2">
-              <img src="./sources/img/last-post2.jpg" alt="yoga" />
-            </div>
+              <img class="card-img card-img2" src="./sources/img/last-post2.jpg" alt="yoga" />
           </div>
           <div class="card-text">
             <ul class="card-list-links">
@@ -231,9 +227,7 @@
 
         <article class="main-card">
           <div class="figure">
-            <div class="card-img card-img3">
-              <img src="./sources/img/last-post3.jpg" alt="music festival" />
-            </div>
+              <img class="card-img card-img3" src="./sources/img/last-post3.jpg" alt="music festival" />
           </div>
           <div class="card-text">
             <ul class="card-list-links">
@@ -264,9 +258,7 @@
 
         <article class="main-card">
           <div class="figure">
-            <div class="card-img card-img4">
-              <img src="./sources/img/last-post4.jpg" alt="food" />
-            </div>
+              <img class="card-img card-img4" src="./sources/img/last-post4.jpg" alt="food" />
           </div>
           <div class="card-text">
             <ul class="card-list-links">
@@ -295,9 +287,7 @@
 
         <article class="main-card">
           <div class="figure">
-            <div class="card-img card-img5">
-              <img src="./sources/img/last-post5.jpg" alt="prints on pillows" />
-            </div>
+              <img class="card-img card-img5" src="./sources/img/last-post5.jpg" alt="prints on pillows" />
           </div>
           <div class="card-text">
             <ul class="card-list-links">
@@ -495,7 +485,7 @@
         </section>
       </aside>
     </div>
-    <article class="products">
+    <!-- <article class="products">
       <h2 class="products-title">Наши изделия</h2>
       <div class="products-wrapper">
         <div class="products-card">
@@ -630,6 +620,6 @@
         </address>
         <div class="copyright">Copyright © 2009–2019 City Blog LLC.</div>
       </div>
-    <!-- </footer> -->
+    </footer> -->
   </body>
 </html>
