--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
         </section>
       </aside>
     </div>
-    <!-- <article class="products">
+    <article class="products">
       <h2 class="products-title">Наши изделия</h2>
       <div class="products-wrapper">
         <div class="products-card">
@@ -647,7 +647,7 @@
       </div>
     </article>
 
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="footer-wrapper">
         <address class="address">
           <ul class="footer-list">
