выровнял в попапе кружки с текстом

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 value="Yes"
                 checked
               />
-              <label class="label-radio-yes" for="radio-yes">Да</label>
+              <label class="label-radio-yes" for="radio-yes"><span class="radio-yes">Да</span></label>
             </div>
             <div class="radio-group">
               <input
@@ -41,7 +41,7 @@
                 name="radio"
                 value="No"
               />
-              <label class="label-radio-no" for="radio-no">Нет</label>
+              <label class="label-radio-no" for="radio-no"><span class="radio-no">Нет</span></label>
             </div>
           </div>
           <label class="label-textarea" for="textarea">
