делаем мобилку "новые посты"

--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
                 value="Yes"
                 checked
               />
-              <label class="label-radio-yes" for="radio-yes"><span class="radio-yes">Да</span></label>
+              <label class="label-radio-yes" for="radio-yes"
+                ><span class="radio-yes">Да</span></label
+              >
             </div>
             <div class="radio-group">
               <input
@@ -41,7 +43,9 @@
                 name="radio"
                 value="No"
               />
-              <label class="label-radio-no" for="radio-no"><span class="radio-no">Нет</span></label>
+              <label class="label-radio-no" for="radio-no"
+                ><span class="radio-no">Нет</span></label
+              >
             </div>
           </div>
           <label class="label-textarea" for="textarea">
@@ -277,7 +281,8 @@
               </li>
             </ul>
             <h2 class="card-title">
-              <a href="#0" class="title-link">Лучшие музыкальные фестивали этого лета</a
+              <a href="#0" class="title-link"
+                >Лучшие музыкальные фестивали этого лета</a
               >
             </h2>
             <div class="date">
@@ -545,11 +550,11 @@
               srcset="./sources/img/shop-item-desk1.jpg"
             />
             <source
-              media="(min-width: 769px)"
+              media="(min-width: 641px)"
               srcset="./sources/img/shop-item-tablet1.jpg"
             />
             <source
-              media="(max-width: 768px)"
+              media="(max-width: 640px)"
               srcset="./sources/img/shop-item-mobile1.jpg"
             />
             <img
@@ -574,16 +579,17 @@
           </div>
         </div>
         <div class="products-card">
-          <source
+          <picture class="products-card-picture">
+            <source
               media="(min-width: 1200px)"
               srcset="./sources/img/shop-item-desk2.jpg"
             />
             <source
-              media="(min-width: 769px)"
+              media="(min-width: 641px)"
               srcset="./sources/img/shop-item-tablet2.jpg"
             />
             <source
-              media="(max-width: 768px)"
+              media="(max-width: 640px)"
               srcset="./sources/img/shop-item-mobile2.jpg"
             />
             <img
@@ -608,16 +614,17 @@
           </div>
         </div>
         <div class="products-card">
-          <source
+          <picture class="products-card-picture">
+            <source
               media="(min-width: 1200px)"
               srcset="./sources/img/shop-item-desk3.jpg"
             />
             <source
-              media="(min-width: 769px)"
+              media="(min-width: 641px)"
               srcset="./sources/img/shop-item-tablet3.jpg"
             />
             <source
-              media="(max-width: 768px)"
+              media="(max-width: 640px)"
               srcset="./sources/img/shop-item-mobile3.jpg"
             />
             <img
