лого на мобилке надо поправить

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
     <div class="main-container">
       <main class="main">
         <article class="main-card">
-          <div class="figure">
+          <div class="main-figure">
             <img
               class="card-img card-img1"
               src="./sources/img/last-post1.jpg"
@@ -232,7 +232,7 @@
         </article>
 
         <article class="main-card">
-          <div class="figure">
+          <div class="main-figure">
             <img
               class="card-img card-img2"
               src="./sources/img/last-post2.jpg"
@@ -267,7 +267,7 @@
         </article>
 
         <article class="main-card">
-          <div class="figure">
+          <div class="main-figure">
             <img
               class="card-img card-img3"
               src="./sources/img/last-post3.jpg"
@@ -302,7 +302,7 @@
         </article>
 
         <article class="main-card">
-          <div class="figure">
+          <div class="main-figure">
             <img
               class="card-img card-img4"
               src="./sources/img/last-post4.jpg"
@@ -335,7 +335,7 @@
         </article>
 
         <article class="main-card">
-          <div class="figure">
+          <div class="main-figure">
             <img
               class="card-img card-img5"
               src="./sources/img/last-post5.jpg"
